--- a/2221/Jenkinsfile
+++ b/2221/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     environment {
         // 본인의 username으로 하실 분은 수정해주세요.
         DOCKERHUB_USERNAME = '1pro'
-        GITHUB_URL = 'https://github.com/k8s-1pro/kubernetes-anotherclass-sprint2.git'
+        GITHUB_URL = 'https://github.com/dae0hwang/kubernetes-anotherclass-sprint2.git'
 
         // 실습 넘버링
         CLASS_NUM = '2221'
@@ -56,18 +56,18 @@ pipeline {
                 echo "docker push ${DOCKERHUB_USERNAME}/api-tester:v1.0.0"
             }
         }
-
+        // 수정
         stage('헬름 템플릿 확인') {
             steps {
                 // K8S 배포
-                sh "helm template api-tester-${CLASS_NUM} ./${CLASS_NUM}/deploy/helm/4.addition/api-tester -n anotherclass-222 --create-namespace"
+                sh "helm template api-tester-${CLASS_NUM} ./${CLASS_NUM}/deploy/helm/5.custome/api-tester -n anotherclass-222 --create-namespace"
             }
         }
 
         stage('헬름 배포') {
             steps {
                 input message: '배포 시작', ok: "Yes"
-                sh "helm upgrade api-tester-${CLASS_NUM} ./${CLASS_NUM}/deploy/helm/4.addition/api-tester -n anotherclass-222 --create-namespace --install"
+                sh "helm upgrade api-tester-${CLASS_NUM} ./${CLASS_NUM}/deploy/helm/5.custome/api-tester -n anotherclass-222 --create-namespace --install"
             }
         }
     }
