--- a/2221/Jenkinsfile
+++ b/2221/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 
     environment {
         // 본인의 username으로 하실 분은 수정해주세요.
-        DOCKERHUB_USERNAME = '1pro'
+        DOCKERHUB_USERNAME = 'hwangdy'
         GITHUB_URL = 'https://github.com/dae0hwang/kubernetes-anotherclass-sprint2.git'
 
         // 실습 넘버링
